<resources>
    <string name="app_name">Weather</string>
    <string name="weather_api">35c3df73bb32c839c5bdab19166839ab</string>
    <string name="init_weather">Weather</string>
    <string name="init_date">Date</string>
    <string name="init_temp">Temperature</string>
    <string name="select_city">Change City;</string>
    <string name="temp_avg">Average Temperature</string>
    <string name="desp">Weather Description</string>
    <string name="wind">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="cur_weather_API">http://api.openweathermap.org/data/2.5/weather?%s</string>
    <string name="further_weather_API">http://api.openweathermap.org/data/2.5/forecast/daily?%s&amp;cnt=10&amp;mode=json</string>
    <string name="location">location</string>

</resources>
